2011-01-20 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-main.c: Renamed as main.c

	* src/nact/Makefile.am: Updated accordingly.

	* tools/Makefile.am: Generate the check-header.c source if it is missing.

	* src/plugin-tracker/na-tracker-dbus.c:
	* src/plugin-tracker/na-tracker-dbus.h:
	* src/plugin-tracker/na-tracker.c:
	* src/plugin-tracker/na-tracker.h: Cosmetic changes in src/plugin-tracker headers.

	* src/plugin-menu/nautilus-actions.c:
	* src/plugin-menu/nautilus-actions.h: Cosmetic changes in src/plugin-menu headers.

	* src/nact/base-application.c:
	* src/nact/base-application-class.h:
	* src/nact/base-assistant.c:
	* src/nact/base-assistant.h:
	* src/nact/base-builder.c:
	* src/nact/base-builder.h:
	* src/nact/base-dialog.c:
	* src/nact/base-dialog.h:
	* src/nact/base-iprefs.c:
	* src/nact/base-iprefs.h:
	* src/nact/base-window.c:
	* src/nact/base-window-class.h:
	* src/nact/egg-tree-multi-dnd.h:
	* src/nact/nact-add-capability-dialog.c:
	* src/nact/nact-add-capability-dialog.h:
	* src/nact/nact-add-scheme-dialog.c:
	* src/nact/nact-add-scheme-dialog.h:
	* src/nact/nact-application.c:
	* src/nact/nact-application.h:
	* src/nact/nact-assistant-export.c:
	* src/nact/nact-assistant-export.h:
	* src/nact/nact-assistant-import.c:
	* src/nact/nact-assistant-import.h:
	* src/nact/nact-clipboard.c:
	* src/nact/nact-clipboard.h:
	* src/nact/nact-confirm-logout.c:
	* src/nact/nact-confirm-logout.h:
	* src/nact/nact-export-ask.c:
	* src/nact/nact-export-ask.h:
	* src/nact/nact-iactions-list.c:
	* src/nact/nact-iactions-list.h:
	* src/nact/nact-iaction-tab.c:
	* src/nact/nact-iaction-tab.h:
	* src/nact/nact-ibasenames-tab.c:
	* src/nact/nact-ibasenames-tab.h:
	* src/nact/nact-icapabilities-tab.c:
	* src/nact/nact-icapabilities-tab.h:
	* src/nact/nact-icommand-tab.c:
	* src/nact/nact-icommand-tab.h:
	* src/nact/nact-icon-chooser.h:
	* src/nact/nact-ienvironment-tab.c:
	* src/nact/nact-ienvironment-tab.h:
	* src/nact/nact-iexecution-tab.c: